[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/custoom/flipaton.webp" type="Texture" id=1]
[ext_resource path="res://scripts/enemy1.gd" type="Script" id=2]
[ext_resource path="res://scripts/enemy1_stats.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 40, 36 )

[node name="enemy1" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 9.53674e-07 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true

[node name="attack_detect" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="attack_detect"]
scale = Vector2( 1.02083, 1.02083 )
polygon = PoolVector2Array( 15.6735, 15.6735, 47.0204, 15.6735, 47.0204, -15.6735, 15.6735, -15.6735, 15.6735, -47.0204, -15.6735, -47.0204, -15.6735, -15.6735, -47.0204, -15.6735, -47.0204, 15.6735, -15.6735, 15.6735, -15.6735, 47.0204, 15.6735, 47.0204 )

[node name="aggro" type="Area2D" parent="."]
collision_layer = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="aggro"]
position = Vector2( 0, 4 )
shape = SubResource( 2 )

[node name="enemy1_stats" type="Node" parent="."]
script = ExtResource( 3 )

[connection signal="area_entered" from="attack_detect" to="." method="_on_attack_detect_area_entered"]
[connection signal="area_exited" from="attack_detect" to="." method="_on_attack_detect_area_exited"]
[connection signal="area_entered" from="aggro" to="." method="_on_aggro_area_entered"]
